--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HTML imports demo page</title>
+	<title>Polymer demo page</title>
 	<link rel="stylesheet" type="text/css" href="styles/shared.css" media="screen">
 	<style>
 		
 	</style>
 </head>
 <body>
-
 
 
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
