--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 	<link rel="import" href="elements/proto-element.html">
 	<link rel="import" href="elements/ready-element.html">
 	<link rel="import" href="elements/name-tag.html">
-	<link rel="import" href="elements/fav-colour.html">
+	<link rel="import" href="elements/fav-color.html">
 	<link rel="import" href="elements/age-slider.html">
 	<link rel="import" href="elements/color-picker.html">
 	<link rel="import" href="elements/editable-color-picker.html">
+
+	<link rel="stylesheet" type="text/css" href="styles/shared.css">
 </head>
 <body>
 	<!-- 3. Declare the element by its tag. -->
@@ -23,6 +25,6 @@
 	<age-slider></age-slider>
 	<color-picker owner="Scott" color="blue"></color-picker>
 	<editable-color-picker></editable-color-picker>
-
+	
 </body>
 </html>
