--- a/elements/fav-color.html
+++ b/elements/fav-color.html
@@ -1,22 +1,19 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 
-<polymer-element name="ready-element">
+<polymer-element name="fav-color">
 	<template>
 		<style>
 			:host { display:block; margin-bottom:20px; border-bottom:1px solid gray; }
 		</style>
 		
-		This element has a ready() method.
-		<span id="el">Not ready...</span>
+		This is <b>{{owner}}</b>'s fav-color element. 
+		{{owner}} likes the color 
+		<span style="color: {{color}}">{{color}}</span>.
 	</template>
-
-	<script>  
+	<script>
 		Polymer({
 			owner: "Daniel",
-			ready: function() {
-				this.$.el.textContent = this.owner +
-				" is ready!";
-			}
+			color: "red"
 		});
 	</script>
 </polymer-element>
