--- a/elements/proto-element.html
+++ b/elements/proto-element.html
@@ -1,7 +1,11 @@
-<link rel="import" href="/components/polymer/polymer.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
 
 <polymer-element name="proto-element">
 	<template>
+		<style>
+			:host { display:block; margin-bottom:20px; border-bottom:1px solid gray; }
+		</style>
+		
 		<span>I'm <b>proto-element</b>. Check out my prototype.</span>
 	</template>
 	<script>
