--- a/elements/ready-element.html
+++ b/elements/ready-element.html
@@ -14,8 +14,7 @@
 		Polymer({
 			owner: "Daniel",
 			ready: function() {
-				this.$.el.textContent = this.owner +
-				" is ready!";
+				this.$.el.textContent = this.owner + " is ready!";
 			}
 		});
 	</script>
