Add google maps custom element

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="import" href="elements/age-slider.html">
 	<link rel="import" href="elements/color-picker.html">
 	<link rel="import" href="elements/editable-color-picker.html">
+	<link rel="import" href="bower_components/google-map/google-map.html">
 
 	<link rel="stylesheet" type="text/css" href="styles/shared.css">
 </head>
@@ -25,6 +26,8 @@
 	<age-slider></age-slider>
 	<color-picker owner="Scott" color="blue"></color-picker>
 	<editable-color-picker></editable-color-picker>
+
+	<google-map latitude="-33.86785" longitude="151.20732"></google-map>
 	
 </body>
 </html>
