Add slide show whip

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="import" href="elements/age-slider.html">
 	<link rel="import" href="elements/color-picker.html">
 	<link rel="import" href="elements/editable-color-picker.html">
+	<link rel="import" href="elements/slide-show.html">
 	<link rel="import" href="bower_components/google-map/google-map.html">
 
 	<link rel="stylesheet" type="text/css" href="styles/shared.css">
@@ -26,6 +27,15 @@
 	<age-slider></age-slider>
 	<color-picker owner="Scott" color="blue"></color-picker>
 	<editable-color-picker></editable-color-picker>
+
+	<slide-show>
+		<img src="img/slide1.png" alt="slide 1">
+		<img src="img/slide2.png" alt="slide 2">
+		<img src="img/slide3.png" alt="slide 3">
+		<img src="img/slide4.png" alt="slide 4">
+	</slide-show>
+
+	<br><br><br><br>
 
 	<google-map latitude="-33.86785" longitude="151.20732"></google-map>
 	
